adding content to practices

--- a/DOMFamilyTreeDemo/index.html
+++ b/DOMFamilyTreeDemo/index.html
@@ -19,6 +19,7 @@
                 Greetings, I'm child[2]. Nobody notices me 😢
             </li>
         </ol>
+        <button id="themeBtn">Theme</button>
         <script src="script.js"></script>
     </body>
 </html>
