--- a/studentActivity1/index.html
+++ b/studentActivity1/index.html
@@ -6,5 +6,42 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Activity #1</title>
     </head>
-    <body></body>
+    <body>
+            <h1 id="heading">My First Dom</h1>
+            
+            <p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio provident tempora aut fugit animi quo maiores nisi magnam. Ex, maiores.</p>
+
+            <table id="myTable">
+                <thead>
+                    <tr>
+                        <th>Languages</th>
+                        <th>difficulty</th>
+                        <th>learning curve</th>
+                        <th>popularity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Javascript</td>
+                        <td>high</td>
+                        <td>3 to 6 month</td>
+                        <td>Very High</td>
+                    </tr>
+                    <tr>
+                        <td>HTML</td>
+                        <td>low</td>
+                        <td>1 month</td>
+                        <td>Very High</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>Medium</td>
+                        <td>2 - 5 month</td>
+                        <td>medium</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        <script src="script.js"></script>
+    </body>
 </html>
