adding content to practices 2

--- a/StudentActivity2/index.html
+++ b/StudentActivity2/index.html
@@ -6,5 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Getting and Changing</title>
     </head>
-    <body></body>
+    <body>
+        <img src="" alt="">
+        <div>
+            <h1>I am the first tag</h1>
+        </div>
+        <table>
+            <tr id="firstTableRow">
+                <td class="col">col 1</td>
+                <td class="col">col 2</td>
+                <td class="col">col 3</td>
+            </tr>
+        </table>
+
+        <script src="script.js"></script>
+    </body>
 </html>
